--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -15,7 +14,7 @@
     <link rel="stylesheet" href='{% static "css/lib/fontawesome.min.css" %}'>
     <link rel="stylesheet" href='{% static "css/base.css" %}'>
   </head>
-  <body>
+  <body class="text-center" data-gr-c-s-loaded="true">
     <!-- This is Body Tag -->
     <!-- <div>base.html</div> -->
     {% block body %}{% endblock %}
