--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,117 +1,44 @@
+/*html,*/
+/*body {*/
+/*  height: 100%;*/
+/*}*/
 
-element.style {
+/*body {*/
+/*  display: -ms-flexbox;*/
+/*  display: flex;*/
+/*  -ms-flex-align: center;*/
+/*  align-items: center;*/
+/*  padding-top: 40px;*/
+/*  padding-bottom: 40px;*/
+/*  background-color: #f5f5f5;*/
+/*}*/
+/**/
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
 }
-.nav-scroller {
-    /* position: relative;
-    z-index: 2;
-    height: 2.75rem;
-    overflow-y: hidden; */
-    /* background-color: #428bca */
+.form-signin .checkbox {
+  font-weight: 400;
 }
-.py-1 {
-    /* padding-bottom: .25rem!important;
-    padding-top: .25rem!important; */
+.form-signin .form-control {
+  position: relative;
+  box-sizing: border-box;
+  height: auto;
+  padding: 10px;
+  font-size: 16px;
 }
-.my-2 {
-    /* margin-bottom: .5rem!important; */
+.form-signin .form-control:focus {
+  z-index: 2;
 }
-.nav {
-    /* display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    padding-left: 0;
-    margin-bottom: 0;
-    list-style: none; */
-    background-color: green;
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
 }
-.d-flex {
-    /* display: -ms-flexbox!important;
-    display: flex!important; */
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
-.a {
-    /* color: #007bff;
-    /* text-decoration: none; */
-    /* background-color: red; */
-    /* background-color: transparent; */
-}
-.p-2 {
-    /* padding: .5rem!important; */
-}
-.text-muted {
-    /* color: #6c757d!important; */
-    /* color: #6c757d!important; */
-}
-/* .pb-1, .py-1 {
-    padding-bottom: .25rem!important;
-}
-
-.pt-1, .py-1 {
-    padding-top: .25rem!important;
-}
-.mb-2, .my-2 {
-    margin-bottom: .5rem!important;
-}
-*, ::after, ::before {
-    box-sizing: border-box;
-}
-user agent stylesheet
-div {
-    display: block;
-}
-body {
-    margin: 0;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #212529;
-    text-align: left;
-    background-color: #fff;
-}
-:root {
-    --blue: #007bff;
-    --indigo: #6610f2;
-    --purple: #6f42c1;
-    --pink: #e83e8c;
-    --red: #dc3545;
-    --orange: #fd7e14;
-    --yellow: #ffc107;
-    --green: #28a745;
-    --teal: #20c997;
-    --cyan: #17a2b8;
-    --white: #fff;
-    --gray: #6c757d;
-    --gray-dark: #343a40;
-    --primary: #007bff;
-    --secondary: #6c757d;
-    --success: #28a745;
-    --info: #17a2b8;
-    --warning: #ffc107;
-    --danger: #dc3545;
-    --light: #f8f9fa;
-    --dark: #343a40;
-    --breakpoint-xs: 0;
-    --breakpoint-sm: 576px;
-    --breakpoint-md: 768px;
-    --breakpoint-lg: 992px;
-    --breakpoint-xl: 1200px;
-    --font-family-sans-serif: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-    --font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
-}
-html {
-    font-family: sans-serif;
-    line-height: 1.15;
-    -webkit-text-size-adjust: 100%;
-    -webkit-tap-highlight-color: transparent;
-}
-user agent stylesheet
-html {
-    color: -internal-root-color;
-}
-*, ::after, ::before {
-    box-sizing: border-box;
-}
-*, ::after, ::before {
-    box-sizing: border-box;
-} */
