--- a/templates/login.html
+++ b/templates/login.html
@@ -7,13 +7,13 @@ signup{% endblock %}
 <form method="post" action="" class="form-signin">
     {% csrf_token %}
 <!--  <img class="mb-4" src="/docs/4.3/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">-->
-  <h1 class="h3 mb-3 font-weight-normal">Please sign up</h1>
+  <h1 class="h3 mb-3 font-weight-normal">Please login</h1>
 <!--  <label for="inputUsername" class="sr-only">Username</label>-->
   <input type="text" name="username" class="form-control"
          placeholder="Username" required="" autofocus="">
 <!--  <label for="inputEmail" class="sr-only">Email address</label>-->
-  <input type="email" name="email" class="form-control"
-         placeholder="Email address" required="" autofocus="">
+<!--  <input type="email" name="email" class="form-control"-->
+<!--         placeholder="Email address" required="" autofocus="">-->
 <!--  <label for="inputPassword" class="sr-only">Password</label>-->
   <input type="password" name="password" class="form-control"
          placeholder="Password" required="">
@@ -22,8 +22,9 @@ signup{% endblock %}
 <!--      <input type="checkbox" value="remember-me"> Remember me-->
 <!--    </label>-->
 <!--  </div>-->
+    {{ error }}
   <button class="btn btn-lg btn-primary btn-block" type="submit">
-      Sign up
+      Log in
   </button>
   <p class="mt-5 mb-3 text-muted">© 2017-2019</p>
 </form>
