--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport:" content="with=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>{% block title %}sample{% endblock %}</title>
+    <title>{% block title %}{% endblock %}</title>
     <!-- <title /> -->
     <!-- <link rel="stylesheet" href="/css/base.css"> -->
     <link rel="stylesheet" href='{% static "css/lib/bootstrap.min.css" %}'>
