--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,18 @@
 <!--    <div>{{ user.username }}님, 안녕하세요!</div>-->
         {% if user.partner %}
             환영합니다.
+            <div>
+                {{ user.partner.name }}
+            </div>
+            <div>
+                {{ user.partner.contact }}
+            </div>
+            <div>
+                {{ user.partner.address }}
+            </div>
+            <div>
+                {{ user.partner.description }}
+            </div>
         {% else %}
             추가정보를 입력하세요.
             <form action="" method="post">
