--- a/templates/index.html
+++ b/templates/index.html
@@ -6,40 +6,61 @@
     {% if user.is_authenticated %}
 <!--    <div>{{ user.username }}님, 안녕하세요!</div>-->
         {% if user.partner %}
-            환영합니다.
-            <div>
-                {{ user.partner.name }}
-            </div>
-            <div>
-                {{ user.partner.contact }}
-            </div>
-            <div>
-                {{ user.partner.address }}
-            </div>
-            <div>
-                {{ user.partner.description }}
+            <div class="row">
+                <div class="col-sm-6 col-sm-offset-3">
+                    <h2>환영합니다.</h2>
+                    <table class="table">
+                        <tr>
+                            <th>업체이름</th>
+                            <td>{{ user.partner.name }}</td>
+                        </tr>
+                        <tr>
+                            <th>연락처</th>
+                            <td>{{ user.partner.contact }}</td>
+                        </tr>
+                        <tr>
+                            <th>주소</th>
+                            <td>{{ user.partner.address }}</td>
+                        </tr>
+                        <tr>
+                            <th>업체 소개</th>
+                            <td>{{ user.partner.description }}</td>
+                        </tr>
+                    </table>
+                    <a href="/partner/edit">
+                        <button class="btn btn-default btn-block">
+                            수정하기
+                        </button>
+                    </a>
+                </div>
             </div>
         {% else %}
             추가정보를 입력하세요.
-            <form action="" method="post">
-                {% csrf_token %}
-<!--                <div class="form-group">-->
-<!--                    <input type="text" name="name" class="form-control">-->
-<!--                </div>-->
-<!--                <div>-->
-<!--                    <input type="text" name="contact" class="form-control">-->
-<!--                </div>-->
-<!--                <div>-->
-<!--                    <input type="text" name="address" class="form-control">-->
-<!--                </div>-->
-<!--                <div>-->
-<!--                    <input type="text" name="description" class="form-control">-->
-<!--                </div>-->
-                {{ form.as_p }}
-                <button class="btn default">저장하기</button>
-            </form>
+            <div class="row">
+                <div class="col-sm-6 col-sm-offset-3">
+                    <form action="" method="post">
+                        {% csrf_token %}
+        <!--                <div class="form-group">-->
+        <!--                    <input type="text" name="name" class="form-control">-->
+        <!--                </div>-->
+        <!--                <div>-->
+        <!--                    <input type="text" name="contact" class="form-control">-->
+        <!--                </div>-->
+        <!--                <div>-->
+        <!--                    <input type="text" name="address" class="form-control">-->
+        <!--                </div>-->
+        <!--                <div>-->
+        <!--                    <input type="text" name="description" class="form-control">-->
+        <!--                </div>-->
+                        {{ form.as_p }}
+                        <button class="btn btn-default">
+                            저장하기
+                        </button>
+                    </form>
+                </div>
+            </div>
         {% endif %}
-    {% else %}
+<!--    {% else %}-->
     <div>로그인 해주세요.</div>
     {% endif %}
 </div>
