--- a/templates/menu_detail.html
+++ b/templates/menu_detail.html
@@ -3,10 +3,23 @@
 {% include "navbar.html" %}
 <div class="container">
     <div class="col-sm-6 col-sm-offset-3">
-        <div>
-        {{ menu.name }}
-        {{ menu.price }}
-        </div>
+        <table class="table">
+            <tr>
+                <th>사진</th>
+                <td><img style="width:50%;" src="{{ menu.image.url }}"></td>
+            </tr>
+            <tr>
+                <th>메뉴 이름</th>
+                <td>{{ menu.name }}</td>
+            </tr>
+            <tr>
+                <th>각겨</th>
+                <td>{{ menu.price }}</td>
+            </tr>
+        </table>
+        <a href="/partner/menu/{{ menu.id }}/edit">
+            <button class="btn btn-default btn-block">수정하기</button>
+        </a>
     </div>
 </div>
 {% endblock %}
