20190917 v2 홈화면 포함한 파트너 부분

--- a/templates/edit_info.html
+++ b/templates/edit_info.html
@@ -9,7 +9,7 @@
             <form action="" method="post">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <button class="btn btn-default">
+                <button class="btn btn-block btn-dark">
                     저장하기
                 </button>
             </form>
