--- a/templates/menu_detail.html
+++ b/templates/menu_detail.html
@@ -18,7 +18,10 @@
             </tr>
         </table>
         <a href="/partner/menu/{{ menu.id }}/edit">
-            <button class="btn btn-default btn-block">수정하기</button>
+            <button class="btn btn-dark btn-block">수정하기</button>
+        </a>
+        <a href="/partner/menu/{{ menu.id }}/delete">
+            <button class="btn btn-danger btn-block">삭제하</button>
         </a>
     </div>
 </div>
