--- a/templates/menu_list.html
+++ b/templates/menu_list.html
@@ -19,7 +19,7 @@
             {% endfor %}
         </table>
         <a href="/partner/menu/add">
-            <button class="btn btn-default btn-block">
+            <button class="btn btn-dark btn-block">
                 메뉴 추가하기
             </button>
         </a>
