--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
                         </tr>
                     </table>
                     <a href="/partner/edit">
-                        <button class="btn btn-default btn-block">
+                        <button class="btn btn-block btn-dark">
                             수정하기
                         </button>
                     </a>
@@ -53,7 +53,7 @@
         <!--                    <input type="text" name="description" class="form-control">-->
         <!--                </div>-->
                         {{ form.as_p }}
-                        <button class="btn btn-default">
+                        <button class="btn btn-dark btn-block">
                             저장하기
                         </button>
                     </form>
