--- a/templates/menu_add.html
+++ b/templates/menu_add.html
@@ -11,7 +11,7 @@
             <div>
             {{ form }}
             </div>
-            <button class="btn btn-default btn-block">
+            <button class="btn btn-dark btn-block">
                 메뉴 {% if replacement %}{{ replacement }}{% else %}추가{% endif %}하기
             </button>
         </form>
