--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,19 +1,19 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-  <a class="navbar-brand" href="#">배달의 민족</a>
+  <a class="navbar-brand" href="/">배달의 민족</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/partner/">홈<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/partner/menu">메뉴</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">주문</a>
-      </li>
+      <li class="nav-item active"><a class="nav-link" href="/partner/">홈<span class="sr-only">(current)</span></a></li>
+      {% if user.is_authenticated %}
+      <li class="nav-item"><a class="nav-link" href="/partner/menu">메뉴</a></li>
+      <li class="nav-item"><a class="nav-link" href="/partner/order">주문</a></li>
+      <li class="nav-item"><a class="nav-link" href="/partner/logout">로그아웃</a></li>
+      {% else %}
+      <li class="nav-item"><a class="nav-link" href="/partner/login">로그인</a></li>
+      <li class="nav-item"><a class="nav-link" href="/partner/signup">회원가입</a></li>
+      {% endif %}
     </ul>
   </div>
 </nav>
