20190923 v1 공용 로그인 로그아웃 메서드 구현

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
   <a class="navbar-brand" href="/">배달의 민족</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+          aria-controls="navbarCollapse" aria-expanded="false"
+          aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -11,8 +13,8 @@
       <li class="nav-item"><a class="nav-link" href="/partner/order">주문</a></li>
       <li class="nav-item"><a class="nav-link" href="/partner/logout">로그아웃</a></li>
       {% else %}
-      <li class="nav-item"><a class="nav-link" href="/partner/login">로그인</a></li>
-      <li class="nav-item"><a class="nav-link" href="/partner/signup">회원가입</a></li>
+      <li class="nav-item"><a class="nav-link" href="/login">로그인</a></li>
+      <li class="nav-item"><a class="nav-link" href="/signup">회원가입</a></li>
       {% endif %}
     </ul>
   </div>
