--- a/templates/login.html
+++ b/templates/login.html
@@ -1,31 +1,24 @@
 {% extends "base.html" %}
-{% block title %}BM
-
-signup{% endblock %}
+{% block title %}BM signup{% endblock %}
 {% block body %}
+{% include "navbar.html" %}
 <!--<body class="text-center" data-gr-c-s-loaded="true">-->
 <form method="post" action="" class="form-signin">
     {% csrf_token %}
-<!--  <img class="mb-4" src="/docs/4.3/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">-->
   <h1 class="h3 mb-3 font-weight-normal">Please login</h1>
-<!--  <label for="inputUsername" class="sr-only">Username</label>-->
   <input type="text" name="username" class="form-control"
          placeholder="Username" required="" autofocus="">
-<!--  <label for="inputEmail" class="sr-only">Email address</label>-->
-<!--  <input type="email" name="email" class="form-control"-->
-<!--         placeholder="Email address" required="" autofocus="">-->
-<!--  <label for="inputPassword" class="sr-only">Password</label>-->
   <input type="password" name="password" class="form-control"
          placeholder="Password" required="">
-<!--  <div class="checkbox mb-3">-->
-<!--    <label>-->
-<!--      <input type="checkbox" value="remember-me"> Remember me-->
-<!--    </label>-->
-<!--  </div>-->
     {{ error }}
   <button class="btn btn-lg btn-primary btn-block" type="submit">
       Log in
   </button>
+  {% if is_client %}
+  <div class="text-center">
+    <a href="/partner/login">업체용 로그인 하기</a>
+  </div>
+  {% endif %}
   <p class="mt-5 mb-3 text-muted">© 2017-2019</p>
 </form>
 <!--</body>-->
