--- a/templates/main.html
+++ b/templates/main.html
@@ -8,7 +8,7 @@
                 {% for partner in partner_list %}
                     <div class="col-sm-4">
                         <h4>{{ partner.name }}</h4>
-                        <div>호식이</div>
+                        <div>메인화면 구성 필요 ^_^</div>
                     </div>
                 {% endfor %}
                     <!--                    -->
