--- a/templates/main.html
+++ b/templates/main.html
@@ -6,10 +6,16 @@
             <div class="col-sm-6 col-sm-offset-3">
                 <div class="row">
                 {% for partner in partner_list %}
-                    <div class="col-sm-4">
+                <div class="col-sm-4">
+                    {% if user.is_authenticated %}
+                    <a href="/{{ partner.id }}">
                         <h4>{{ partner.name }}</h4>
-                        <div>메인화면 구성 필요 ^_^</div>
-                    </div>
+                    </a>
+                    {% else %}
+                        <h4>{{ partner.name }}</h4>
+                    {% endif %}
+                    <div>{{ partner.address }}</div>
+                </div>
                 {% endfor %}
                     <!--                    -->
 <!--                    <div class="col-sm-4">-->
